# magma

./: .gitignore  LICENSE  main.py  mkdocs.yaml  pyproject.toml  requirements.txt
baml_client/: __init__.py  inlinedbaml.py  partial_types.py  type_builder.py  types.py
baml_src/: resume.baml
docs/: agent.md  cli.md  index.md  model.md  models.md  observe.md  prompt.md  prompts.md  registry.md  sandbox.md  tools.md  traces.md
docs/dev/: agent_dev.md  dev_prompts.md  dev_tools.md  models_dev.md  observe_dev.md  prompts_dev.md  registry_dev.md  tools_dev.md
magma/: __init__.py  agent.py  models.py  observe.py  prompts.py  registry.py  tools.py
magma/execute/: container.py  sandbox.py
magma/inference/: __init__.py
magma/training/: __init__.py
tests/: test_agent.py  test_basic.py  test_models.py  test_observe.py  test_prompts.py  test_registry.py  test_tools.py
