[project]
name = "magma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "baml-py>=0.90.2",
    "langfuse>=3.0.5",
    "langgraph>=0.4.10",
    "litellm>=1.73.1",
    "python-dotenv>=1.1.1",
    "smolagents[audio,docker,e2b,gradio,litellm,mcp,openai,telemetry,toolkit,transformers,vision]>=1.19.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
]
